--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
 asgiref==3.6.0
+cloudinary==1.32.0
 dj-database-url==0.5.0
+dj3-cloudinary-storage==0.0.6
 Django==3.2.16
 django-allauth==0.52.0
+django-cloudinary-storage==0.3.0
 gunicorn==20.1.0
 oauthlib==3.2.2
+Pillow==9.4.0
 psycopg2==2.9.5
 PyJWT==2.6.0
 python3-openid==3.2.0
